test/e2e/testdata/.snapshots/TestSetupFailureFlow/Invalid_Public_Key/GET_api_private_ipinfo_1.snaphost
HTTP/2.0 401 Unauthorized
Content-Length: 106
Content-Type: application/json
Date: Wed, 18 Jun 2025 12:15:19 GMT
Server: mdbws
Www-Authenticate: Digest realm="MMS Public API", domain="", nonce="40vHjz+gVF2bWuINTn4XqYtVG8YAl+T/", algorithm=MD5, qop="auth", stale=false
X-Xgen-Up-Proto: HTTP/2

{
  "error" : 401,
  "reason" : "Unauthorized",
  "detail" : "You are not authorized for this resource."
}